started wiring the compiler to bytecode. need to add attributes to the bytecode still